[package]
name = "pick"
version = "0.1.0"
authors = ["George Madrid <gmadrid@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Simple program implementing Knuth's algorithm for choosing n from M items in O(n) space."
readme = "README.md"
homepage = "https://github.com/gmadrid/pick"
repository = "https://github.com/gmadrid/pick"

[dependencies]
argh = "0.1"
fehler = "1.0"
anyhow = "1.0"
rand = "0.7"
